<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Calculatorv2Activity!</string>
    <string name="app_name">Calculatorv2</string>
    
    <!-- EditText -->
    
    <!-- Numbers -->
	<string name="zero">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	
	<!-- Operators -->
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="division">/</string>
	<string name="multiply">x</string>
	<string name="equal">=</string>
	
	<!-- Extra Buttons -->
	<string name="cancel">C</string>
	<string name="clear">CE</string>
	<string name="delete">del</string>
	<string name="posNeg">+/-</string>
	<string name="dot">.</string>
	
	
	
	<string name="dummy">Dummy Text Here</string>
	
	
	
	<!-- Colors -->
	<string name="background"></string>
	
	
	
</resources>



